--- a/checkProgress.html
+++ b/checkProgress.html
@@ -34,7 +34,7 @@
           <div id="composeParticipants"><b>Participants:</b></div>
           <div id="progressText"><b>Progress: </b>0% completed<br></div>
           <progress id="progressBar" value="20" max="100"></progress><br>            
-          <button class="btn btn-default" id="playSong">Play</button> 
+          <button class="btn btn-default" id="playSong" disabled>Play</button> 
           <button class="btn btn-default" id="stopSong">Stop</button>
         </div>
       </div>
