--- a/compose.html
+++ b/compose.html
@@ -35,7 +35,7 @@
           <br>
           <input id="from" style="width: 50px" type="text" placeholder="from" value="0">
           <input id="to" style="width: 50px" type="text" placeholder="to" value="10">
-          <button id="playSong" class="btn btn-default">Play</button> 
+          <button id="playSong" class="btn btn-default" disabled>Play</button> 
           <button id="stopSong" class="btn btn-default">Stop</button><br>
         </div>
       </div>
