--- a/gallery.html
+++ b/gallery.html
@@ -23,14 +23,21 @@
     <dir id="loader"></dir>
 
     <div id="mainDiv" style="display: none;" class="animate-bottom container">
-      <div class="statBoard">
+      <!--<div class="statBoard">
         <div class="title">Total Users: </div><div class="info" id="totalUsers">0 users</div>
         <div class="title">Requests: </div><div class="info" id="requests">0 lyrics</div>
         <div class="title">Completed: </div><div class="info" id="completed"> 0 songs</div>
+      </div>-->
+
+      <div id="board">
+        <div class="outBox">
+          <div class="inBox">
+            <div class="title">Total Users: </div><div class="info" id="totalUsers">0 users</div>
+            <div class="title">Requests: </div><div class="info" id="requests">0 lyrics</div>
+            <div class="title">Completed: </div><div class="info" id="completed"> 0 songs</div>
+          </div>
+        </div>
       </div>
-
-      <div id="board"></div>
-
     </div>
 
     <div id="loginModal" class="modal">
