--- a/songInfo.html
+++ b/songInfo.html
@@ -39,7 +39,7 @@
       <div class="col-md-4">
         <div style="padding-bottom: 14px">
           <div style="font-size: 24px">Preview</div>
-          <button id="playSong" style="width: 30px; height: 30px">&#9658</button>
+          <button id="playSong" style="width: 30px; height: 30px" disabled>&#9658</button>
           <!--<button style="width: 30px; height: 30px">&#10073&#10073</button>-->
           <button id="stopSong" style="width: 30px; height: 30px">&#9726</button>
           <div id="songLength">(0 sec)</div>
