--- a/gallery.html
+++ b/gallery.html
@@ -30,12 +30,11 @@
       </div>-->
 
       <div id="board">
-        <div class="outBox">
-          <div class="inBox">
-            <div class="title">Total Users: </div><div class="info" id="totalUsers">0 users</div>
-            <div class="title">Requests: </div><div class="info" id="requests">0 lyrics</div>
-            <div class="title">Completed: </div><div class="info" id="completed"> 0 songs</div>
-          </div>
+        <div class="inBox">
+          <div style="font-family: 'Amita'; font-size: 24px;">Statistics</div><br>
+          <div class="title">Total Users: </div><div class="info" id="totalUsers">0 users</div>
+          <div class="title">Requests: </div><div class="info" id="requests">0 lyrics</div>
+          <div class="title">Completed: </div><div class="info" id="completed"> 0 songs</div>
         </div>
       </div>
     </div>
