--- a/songInfo.html
+++ b/songInfo.html
@@ -6,6 +6,7 @@
     <title>Melodize - Song List</title>
     <link href="scripts/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet"/>
+    <link href="css/songInfo.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -61,7 +62,23 @@
 
       <div class="col-md-4">
         <div style="font-size: 24px">Song List</div>
-        <div id="songList" style="width: 100%; height: 525px; overflow: auto; background-color: #efefef"></div>
+        <!--Instrument:
+        <select id="instrumentSelect">
+          <option value="any">any</option>
+          <option value="piano">piano</option>
+          <option value="violin">violin</option>
+          <option value="flute">flute</option>
+          <option value="guitar">guitar</option>
+        </select><br>-->
+        Sort:
+        <select id="sortingSelect">
+          <option value=0>by title (dec)</option>
+          <option value=1>by title (inc)</option>
+          <option value=2>by participants (dec)</option>
+          <option value=3>by participants (inc)</option>
+        </select>
+        <button id="goBtn">Go</button>
+        <div id="songList" style="width: 100%; height: 500px; overflow: auto; background-color: #efefef"></div>
       </div>
     </div>
  
@@ -89,6 +106,7 @@
 
     <script src="scripts/jquery/js/jquery-1.9.0.min.js"></script>
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
+    <script src="scripts/jquery/js/jquery-plugin.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/songInfo.js"></script>
