--- a/songInfo.html
+++ b/songInfo.html
@@ -70,14 +70,13 @@
           <option value="flute">flute</option>
           <option value="guitar">guitar</option>
         </select><br>-->
-        Sort:
+        Sort by:
         <select id="sortingSelect">
-          <option value=0>by title (dec)</option>
-          <option value=1>by title (inc)</option>
-          <option value=2>by participants (dec)</option>
-          <option value=3>by participants (inc)</option>
+          <option value=2>participants (dec)</option>
+          <option value=3>participants (inc)</option>
+          <option value=1>title (dec)</option>
+          <option value=0>title (inc)</option>
         </select>
-        <button id="goBtn">Go</button>
         <div id="songList" style="width: 100%; height: 500px; overflow: auto; background-color: #efefef"></div>
       </div>
     </div>
