--- a/songInfo.html
+++ b/songInfo.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
-  <body style="background-color: #e1e1e1">
+  <body>
     <ul class="nav-ul">
       <li class="nav-li"><div style="font-family: 'Amita'; float: left; font-size: 20px; padding: 10px;">Melodize</div></li>
       <li class="nav-li"><a id="loginTab">Sign In</a></li>
@@ -23,28 +23,36 @@
 
     <div id="loader"></div>
 
-    <div id="mainDiv" style="padding: 14px; display: none;" class="animate-bottom">
+    <img id="background" class="album-back" src="./img/empty.png" onerror="this.src = './img/index.png'">
+    <div id="mainDiv" style="display: none;" class="animate-bottom">
       <div class="col-md-4">
         <div style="padding: 14px">
-        <img id="albumCover" style="width: 100%; object-fit: cover;" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
-        <div style="padding-top: 14px; padding-bottom: 14px">
-          <div id="titleInfo" style="font-size: 24px;">Title</div>
-          <div id="descriptionInfo">Description</div>
-        </div>
-        <div id="instrumentInfo">Instrument: </div>
-        <div id="preferenceInfo">Requester's remark:  </div>
-        <div id="participantsInfo">No. of participants: </div>
+          <img id="albumCover" class="album-cover" onerror="this.src = './img/default-cover-art.png'" src="./img/default-cover-art.png">
+          <div style="padding-top: 14px; padding-bottom: 14px">
+            <div id="titleInfo" style="font-size: 24px;">Title</div>
+            <div id="descriptionInfo">Description</div>
+          </div>
+          <div>
+            <statnum>1</statnum> Comments<br>
+            <textarea class="form-control" placeholder="add a comment"></textarea>
+            <div id="comments" class="comment-box"></div>
+          </div>
         </div>
       </div>
 
       <div class="col-md-4">
-        <div style="padding-bottom: 14px">
-          <div style="font-size: 24px">Preview</div>
-          <button id="playSong" style="width: 30px; height: 30px" disabled>&#9658</button>
+        <div style="margin-top: 20px; height: 200px">
+          <div class="info-text" id="instrumentInfo">Instrument: </div>
+          <div class="info-text" id="preferenceInfo">Requester's remark:  </div>
+          <div class="info-text" id="participantsInfo">No. of participants: </div>
+          <div class="info-text" id="requesterInfo">Requester: </div>
+          <br>
+          <button id="playSong" class="btn btn-default" disabled>&#9658</button>
           <!--<button style="width: 30px; height: 30px">&#10073&#10073</button>-->
-          <button id="stopSong" style="width: 30px; height: 30px">&#9726</button>
-          <div id="songLength">(0 sec)</div>
+          <button id="stopSong" class="btn btn-default">&#9726</button> 
+          <div style="display: inline;" class="info-text" id="songLength">(0 sec)</div>
         </div>
+        <!--
         <div>
           <div style="font-size: 24px">Top 3 Contributors</div>
           <ol>
@@ -53,15 +61,16 @@
             <li>Charlie (50 notes)</li>
           </ol>
         </div>
+        -->
         <div style="width: 90%">
           <div style="font-size: 24px">Lyrics</div>
-          <div id="lyricBox" style="padding: 8px; width: 100%; height: 300px; overflow: auto; background-color: #efefef"></div><br>
+          <div id="lyricBox" class="lyric-box"></div><br>
           <center><button style="width: 100%" class="btn btn-success" id="joinBtn">Join</button></center>
         </div>
       </div>
 
-      <div class="col-md-4">
-        <div style="font-size: 24px">Song List</div>
+      <div class="col-md-4 song-list-outer">
+        <div style="font-size: 24px">Other Songs</div>
         <!--Instrument:
         <select id="instrumentSelect">
           <option value="any">any</option>
@@ -77,7 +86,7 @@
           <option value=1>title (dec)</option>
           <option value=0>title (inc)</option>
         </select>
-        <div id="songList" style="width: 100%; height: 500px; overflow: auto; background-color: #efefef"></div>
+        <div id="songList" class="song-list"></div>
       </div>
     </div>
  
