--- a/profile.html
+++ b/profile.html
@@ -79,7 +79,7 @@
       <div class="modal-content" style="width: 340px;">
         <span class="close" id="profileClose">&times;</span><br>
         <div class="login-div"><input class="login-input" id="profileURL" placeholder="New image URL"></div>
-          <center><img id="profilePreview" style="width: 225px;" src="." onerror="this.src = './img/default-avatar.jpg'"></center>
+          <center><img id="profilePreview" class="profile-pic" " src="." onerror="this.src = './img/default-avatar.jpg'"></center>
         <div class="login-div"><button class="btn btn-default login-input" id="profileBtn">Change</button></div>
       </div>
     </div>
