--- a/songInfo.html
+++ b/songInfo.html
@@ -58,7 +58,8 @@
         <div class="col-md-12">
           <div class="comment-section">
             <div class="comment-tag"><statnum>2</statnum> Comments</div>
-            <textarea class="form-control" placeholder="add a comment"></textarea>
+            <textarea class="form-control" id="commentContent" placeholder="add a comment"></textarea>
+            <div style="text-align: right"><button class="comment-btn" id="addComment">Comment</button></div>
             <div id="comments"></div>
           </div>
         </div>
@@ -107,6 +108,7 @@
     <script src="scripts/jquery/js/jquery-plugin.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/sound.js"></script>
     <script src="scripts/songInfo.js"></script>
   </body>
 </html>
