--- a/songInfo.html
+++ b/songInfo.html
@@ -7,6 +7,7 @@
     <link href="scripts/jquery/css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet"/>
     <link href="css/songInfo.css" rel="stylesheet"/>
+    <link href="css/comment.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Amita' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -57,9 +58,9 @@
 
         <div class="col-md-12">
           <div class="comment-section">
-            <div class="comment-tag"><statnum>2</statnum> Comments</div>
+            <div class="comment-tag"><statnum id="commentCount">0</statnum> Comments</div>
             <textarea class="form-control" id="commentContent" placeholder="add a comment"></textarea>
-            <div style="text-align: right"><button class="comment-btn" id="addComment">Comment</button></div>
+            <div style="text-align: right"><button class="blue-btn" id="addComment">Comment</button></div>
             <div id="comments"></div>
           </div>
         </div>
@@ -109,6 +110,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/sound.js"></script>
+    <script src="scripts/comment.js"></script>
     <script src="scripts/songInfo.js"></script>
   </body>
 </html>
