--- a/checkSong.html
+++ b/checkSong.html
@@ -52,7 +52,7 @@
           <textarea class="form-control" id="commentContent" placeholder="add a comment"></textarea>
           <div style="text-align: right"><button class="blue-btn" id="addComment">Comment</button></div>
           <div id="comments"></div>
-          <button id="showMore">Show More</button>
+          <button id="showMore" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button>
         </div>
       </div>
     </div>
@@ -74,7 +74,9 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/sound.js"></script>
     <script src="scripts/comment.js"></script>
+    <script src="scripts/slider.js"></script>
     <script src="scripts/checkSong.js"></script>
   </body>
 </html>
