--- a/profile.html
+++ b/profile.html
@@ -49,16 +49,14 @@
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="info-col">
-          <div class="list-tag"><redfont id="requestNum">0</redfont> REQUESTS</div>
-          <div id="myRequests"></div>
-        </div>
+        <div class="list-tag"><redfont id="requestNum">0</redfont> REQUESTS</div>
+        <div id="myRequests"></div>
+        <center><button id="showMore1" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button></center>
       </div>
       <div class="col-sm-4">
-        <div class="info-col">
-          <div class="list-tag"><redfont id="contributionNum">0</redfont> CONTRIBUTIONS</div>
-          <div id="myContributions"></div>
-        </div>
+        <div class="list-tag"><redfont id="contributionNum">0</redfont> CONTRIBUTIONS</div>
+        <div id="myContributions"></div>
+        <center><button id="showMore2" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button></center>
       </div>
     </div>
 
