--- a/songInfo.html
+++ b/songInfo.html
@@ -62,6 +62,7 @@
             <textarea class="form-control" id="commentContent" placeholder="add a comment"></textarea>
             <div style="text-align: right"><button class="blue-btn" id="addComment">Comment</button></div>
             <div id="comments"></div>
+            <button id="showMore" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button>
           </div>
         </div>
       </div>
