--- a/checkProgress.html
+++ b/checkProgress.html
@@ -62,6 +62,7 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
+    <script src="scripts/sound.js"></script>
     <script src="scripts/checkProgress.js"></script>
   </body>
 </html>
