--- a/compose.html
+++ b/compose.html
@@ -69,6 +69,8 @@
     <script src="scripts/jquery/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="scripts/login.js"></script>
-    <script src="scripts/compose1.js"></script>
+    <script src="scripts/sound.js"></script>
+    <script src="scripts/slider.js"></script>
+    <script src="scripts/compose.js"></script>
   </body>
 </html>
