--- a/profile.html
+++ b/profile.html
@@ -50,13 +50,13 @@
       </div>
       <div class="col-sm-4">
         <div class="list-tag"><redfont id="requestNum">0</redfont> REQUESTS</div>
-        <div id="myRequests"></div>
-        <center><button id="showMore1" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button></center>
+        <div id="myRequests"></div><br>
+        <center><div id="showMore1" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div></center>
       </div>
       <div class="col-sm-4">
         <div class="list-tag"><redfont id="contributionNum">0</redfont> CONTRIBUTIONS</div>
-        <div id="myContributions"></div>
-        <center><button id="showMore2" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button></center>
+        <div id="myContributions"></div><br>
+        <center><div id="showMore2" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div></center>
       </div>
     </div>
 
