--- a/songInfo.html
+++ b/songInfo.html
@@ -62,7 +62,7 @@
             <textarea class="form-control" id="commentContent" placeholder="add a comment"></textarea>
             <div style="text-align: right"><button class="blue-btn" id="addComment">Comment</button></div>
             <div id="comments"></div>
-            <button id="showMore" class="showMore"><i class="material-icons">&#xE313;</i> Show More</button>
+            <div id="showMore" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div>
           </div>
         </div>
       </div>
@@ -78,7 +78,8 @@
             <option value=0>title (inc)</option>
           </select>
         </div>
-        <div id="songList" class="song-list"></div>
+        <div id="songList" class="song-list"></div><br>
+        <center><div id="songList-showMore" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div></center>
       </div>
 
     </div>
