lazy loading on the profile page

--- a/compose.html
+++ b/compose.html
@@ -22,7 +22,7 @@
 
     <div id="loader"></div>
 
-    <img id="infoBoard" src="./img/empty.png" class="album-back">
+    <img id="infoBoard" src="./img/empty.png" class="album-back" onerror="this.src = './img/index.png'">
 
     <div id="mainDiv" style="display: none" class="animate-bottom container">
       <div class="row" style="padding-bottom: 14px; padding-top: 14px;">
