--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
       <div class="col-sm-12 section-home" id="learnStart">
         <h1 class="section-tag">Tasks</h1>
-        <div class="col-sm-6">
-          <img class="section-image" style="display: inline-block;" src="./img/sc3.png">
+        <div class="col-sm-6" style="display: inline-block;">
+          <img class="section-image" src="./img/sc3.png">
         </div>
         <div class="section-content">
           The three tasks our platform supports are,<br><br>
@@ -129,7 +129,7 @@
       <div class="col-sm-12 section-home">
         <h1 class="section-tag">Aggregation</h1>
         <div class="col-sm-6" style="display: inline-block;">
-          <img class="section-image" align="left" src="./img/sc4.png">
+          <img class="section-image" src="./img/sc4.png">
         </div>
         <div class="section-content">
           How we aggregate  each and every one of your input is crucial to our process as it directly affects the coherency and flow of our songs. We take each of your segment inputs and pool them together first. Then, we choose the most popular note for each syllable and integrate it into the song.<br><br>
