--- a/profile.html
+++ b/profile.html
@@ -51,12 +51,18 @@
       <div class="col-sm-4">
         <div class="list-tag"><redfont id="requestNum">0</redfont> REQUESTS</div>
         <div id="myRequests"></div><br>
-        <center><div id="showMore1" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div></center>
+        <center>
+          <div id="showMore1" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div>
+          <button class="green-btn" id="requesterBtn">SUBMIT LYRICS</button>
+        </center>
       </div>
       <div class="col-sm-4">
         <div class="list-tag"><redfont id="contributionNum">0</redfont> CONTRIBUTIONS</div>
         <div id="myContributions"></div><br>
-        <center><div id="showMore2" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div></center>
+        <center>
+          <div id="showMore2" class="showMore"><i class="material-icons">&#xE313;</i> Show More</div>
+          <button class="green-btn" id="workerBtn">START COMPOSING</button>
+        </center>
       </div>
     </div>
 
