--- a/songInfo.html
+++ b/songInfo.html
@@ -52,7 +52,7 @@
           <div class="info-col">
             <div class="list-tag">LYRICS</div>
             <div id="lyricBox" class="lyric-box"></div><br>
-            <center><button style="width: 100%" class="btn btn-success" id="joinBtn">Join</button></center>
+            <center><button style="width: 100%" class="btn btn-success" id="joinBtn">COMPOSE MELODY</button></center>
           </div>
         </div>
 
